# novel-translator

./: .gitignore  LICENSE  README.md  RELEASE_BODY.md  RELEASE_NOTES.md  build.bat  build_release.py  launcher.py  novel_translator.spec  pyproject.toml  requirements.txt
examples/: glossary_example.json
scripts/: run_beta_first3_audit.py  test_deepseek.out  test_deepseek.py  test_deepseek_result.txt
src/novel_translator/: __init__.py  __main__.py  cli.py  downloader.py  engine.py  gui.py  providers.py
