[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "novel-translator"
version = "1.1.1"
description = "日文轻小说 AI 翻译工具 — EPUB 日文→中文翻译器，支持多 AI 提供商 / CLI / GUI 双模式"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "novel-translator contributors" },
]
keywords = ["translation", "japanese", "chinese", "epub", "light-novel", "ai", "deepseek", "openai", "anthropic", "claude", "gemini", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "openai>=1.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "flet>=0.25",
    "requests>=2.28",
]

[project.optional-dependencies]
cli = [
    "openai>=1.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "requests>=2.28",
]
providers = [
    "anthropic>=0.30",
    "google-generativeai>=0.5",
]

[project.scripts]
novel-translator = "novel_translator.__main__:main"

[project.urls]
Homepage = "https://github.com/zjy2968466837/novel-translator"
Repository = "https://github.com/zjy2968466837/novel-translator"
Issues = "https://github.com/zjy2968466837/novel-translator/issues"

[tool.setuptools.packages.find]
where = ["src"]
